[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-adjust"  # Match what users will pip install
version = "0.1.5"
description = "Modern Image Processing System with format conversion, filters, and adjustments"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Brandon Chew", email = "chewbrandon9911@gmail.com"}
]
dependencies = ["Pillow>=9.0.0"]

[project.scripts]
imagekit = "app:main"

[tool.setuptools.packages.find]
include = ["app"]
