[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-adjust"
version = "0.1.6"
description = "A simple Notepad app"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Brandon Chew", email = "chewbrandon9911@gmail.com"}
]
dependencies = []

[project.scripts]
Image_Kit = "Image_Kit:run"
